# fastapi-export-openapi

./: .gitignore  pyproject.toml
.github/workflows/: coverage.yml  test.yml
fastapi_export_openapi/: export_openapi.py  main.py
tests/: test_fastapi_export_openapi.py
