[tool.poetry]
name = "fastapi_export_openapi"
version = "0.1.1"
description = "GitHub Action to export OpenAPI schema from FastAPI apps."
authors = ["Andrew Hoetker <andrew@hoetker.engineer>"]

[tool.poetry.scripts]
fastapi-export-openapi = "fastapi_export_openapi.main:app"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
pydantic = "^1.8.2"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^5.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
